hw1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-http-server-v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-http-server
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: simple-http-server
    spec:
      containers:
        - name: simple-http-server-v1
          image: geracimov/simple-http-server:v1
          ports:
            - name: http
              containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /hello
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
